image compression and ready connections between html files

--- a/dev/main.css
+++ b/dev/main.css
@@ -13531,6 +13531,11 @@ body {
   }
 }
 
+.recipe-title {
+  text-decoration: none;
+  color: #232323;
+}
+
 .badge-orange {
   color: #ffffff;
   background-color: #FF6109;
