image compression and scss improvements

--- a/dev/main.scss
+++ b/dev/main.scss
@@ -7,7 +7,7 @@
 @use './scss/base/base';
 @use './scss/base/typography';
 @use './scss/components/badge';
-@use './scss/components/box';
+@use './scss/components/container.scss';
 @use './scss/components/button';
 @use './scss/components/input';
 @use './scss/components/media';
