--- a/dev/main.css
+++ b/dev/main.css
@@ -13413,15 +13413,6 @@ body {
           justify-content: center;
 }
 
-.align-badge-left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
 .align-end {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13438,32 +13429,6 @@ body {
   -webkit-line-clamp: 2;
   /* number of lines to show */
   line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-.padding-0 {
-  padding-bottom: 0rem !important;
-}
-
-.base-container {
-  max-width: 85%;
-}
-
-.recipe-description-space {
-  min-height: 6rem;
-}
-
-.recipe-description-space-top10 {
-  min-height: 4rem;
-}
-
-.overflow-title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  /* number of lines to show */
-  line-clamp: 1;
   -webkit-box-orient: vertical;
 }
 
@@ -13495,23 +13460,6 @@ body {
   font-weight: 500;
 }
 
-.text-nevbar {
-  color: #ffffff !important;
-}
-
-.text-cards-categories {
-  font-weight: 1rem;
-}
-
-.text-label-time {
-  font-size: 1rem;
-}
-
-.text-title-recipe {
-  text-decoration: none !important;
-  color: #232323;
-}
-
 .user-name {
   font-family: "Work Sans", sans-serif;
   font-weight: 500;
@@ -13531,9 +13479,15 @@ body {
   }
 }
 
-.recipe-title {
+.link-title {
   text-decoration: none;
   color: #232323;
+}
+
+@media only screen and (max-width: 480px) {
+  .title-responsive {
+    margin-top: 5rem;
+  }
 }
 
 .badge-orange {
@@ -13599,7 +13553,7 @@ body {
   color: #ffffff;
 }
 
-.box-login {
+.container-login {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13618,36 +13572,20 @@ body {
   gap: 1rem;
 }
 
-.box-signup {
+.container-signup {
   border-radius: 0.75rem;
   background: #ffffff;
   width: 31rem;
 }
 @media only screen and (max-width: 480px) {
-  .box-signup {
+  .container-signup {
     border-radius: 0.75rem;
     background: #ffffff;
     max-width: 21.5rem;
   }
 }
 
-.box-home {
-  width: 14.5rem;
-  border: 0.063rem solid #DADADA;
-  border-radius: 0.5rem;
-}
-@media only screen and (max-width: 480px) {
-  .box-home {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 90%;
-    border: 0.063rem solid #DADADA;
-    border-radius: 0.5rem;
-  }
-}
-
-.box-item {
+.container-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13665,7 +13603,7 @@ body {
   background-color: none;
 }
 
-.box-pass-big {
+.container-pass-big {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13685,7 +13623,7 @@ body {
   position: absolute;
 }
 
-.box-pass-small {
+.container-pass-small {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13705,12 +13643,6 @@ body {
   position: absolute;
 }
 
-.box-bo {
-  width: 100%;
-  padding-left: 6%;
-  padding-right: 6%;
-}
-
 .card-recipe {
   border: 0.063rem solid #DADADA;
   border-radius: 0.75rem;
@@ -13726,6 +13658,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.card-recipe-img {
+  width: 100%;
+  height: 110px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .card-top-recipe {
@@ -13772,13 +13711,6 @@ body {
 .top-recipe-img {
   width: 320px;
   height: 250px;
-}
-
-.card-recipe-img {
-  width: 100%;
-  height: 110px;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .profile-container {
@@ -13838,19 +13770,6 @@ body {
   }
 }
 
-@media only screen and (max-width: 480px) {
-  .btn-hidden {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .btn-hidden-desk {
-    display: none;
-    position: relative;
-  }
-}
-
 .recipes-container {
   width: 1450px;
   margin-left: 250px;
@@ -13862,15 +13781,29 @@ body {
   }
 }
 
+.img-detail {
+  border: none;
+  width: 598px;
+  height: 598px;
+  margin-right: 40px;
+}
 @media only screen and (max-width: 480px) {
-  .photo-hidden {
-    display: none;
+  .img-detail {
+    width: 344px;
+    height: 234px;
+    margin-bottom: 30px;
   }
 }
 
-@media only screen and (min-width: 1200px) {
-  .user-hidden {
-    display: none;
+@media only screen and (max-width: 480px) {
+  .edit-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -13916,51 +13849,6 @@ body {
        object-fit: cover;
   }
 }
-.img-detail {
-  border: none;
-  width: 598px;
-  height: 598px;
-  margin-right: 40px;
-}
-@media only screen and (max-width: 480px) {
-  .img-detail {
-    width: 344px;
-    height: 234px;
-    margin-bottom: 30px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .title-responsive {
-    margin-top: 5rem;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .edit-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
-.btn-orange-dark {
-  background: #FF9E45;
-  color: #232323;
-  text-decoration: none;
-  border: none;
-}
-
-.btn-orange-ligth {
-  background: #FFCB9A;
-  color: #FF6109;
-  text-decoration: none;
-}
-
 .btn-signup-dark {
   height: 2rem;
   width: 18.5rem;
@@ -14158,37 +14046,6 @@ body {
   color: #ffffff;
 }
 
-.btn-long-ligth {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0.5rem 0.75rem;
-  gap: 0.37rem;
-  width: 27.5rem;
-  height: 1.87rem;
-  background: none;
-  border-radius: 0.5rem;
-  border: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #FFE0C2;
-  font-size: 0.8rem;
-  text-decoration: none;
-  color: #FF6109;
-}
-
-.btn-long-ligth:hover {
-  color: #232323;
-}
-
 .hover-grow {
   display: inline-block;
   vertical-align: middle;
@@ -14216,12 +14073,21 @@ body {
   transform: scale(1.1);
 }
 
-.input-wrapper {
-  position: relative;
+@media only screen and (max-width: 480px) {
+  .btn-hidden {
+    display: none;
+  }
 }
 
-.input.password {
-  padding: 0.93rem 2.18rem 0.93rem 0.93rem;
+@media only screen and (min-width: 1200px) {
+  .btn-hidden-desk {
+    display: none;
+    position: relative;
+  }
+}
+
+.input-wrapper {
+  position: relative;
 }
 
 .input-icon {
@@ -14295,59 +14161,6 @@ body {
 .size-img {
   height: 12.5rem;
   width: 12.5rem;
-}
-
-.size-img-big {
-  height: 16.62rem;
-  width: 21.5rem;
-}
-
-.size-img-md {
-  height: 14.62rem;
-  width: 21.5rem;
-}
-
-.size-img-sm {
-  height: 2.073rem;
-  width: 0.2rem;
-}
-
-.size-img-list {
-  height: 3.5rem;
-  width: 15.375rem;
-  border-radius: 0.5rem;
-}
-
-.size-img-detail {
-  height: 31em;
-  width: 33.12rem;
-  margin-top: 0;
-  border-radius: 0.2rem;
-}
-
-.size-img-categories {
-  height: 10rem;
-  width: 13rem;
-}
-@media only screen and (max-width: 480px) {
-  .size-img-categories {
-    height: 10rem;
-    width: 28rem;
-  }
-}
-
-.img-retote {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.color-input {
-  border-color: #FF6109;
-}
-
-.border-photo-card {
-  border: 0.12rem solid #AFB1B6;
-  border-radius: 0.75rem 0rem 0rem 0.75rem;
 }
 
 .label-time {
@@ -14442,6 +14255,18 @@ body {
   .isotipo-responsive {
     width: 42px;
     height: 30px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .photo-hidden {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .user-hidden {
+    display: none;
   }
 }
 
