--- a/dev/scss/components/_container.scss
+++ b/dev/scss/components/_container.scss
@@ -3,12 +3,14 @@
 
 //mixin.basic-box($display, $flex-direction, $align, $padding, $width, $height, $border-radius, $background-color)
 
-.box-login {
+
+//login and signup
+.container-login {
     @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 20.5rem, 0.75rem, vars.$clr-white);
     gap: 1rem;
 }
 
-.box-signup {
+.container-signup {
     border-radius: 0.75rem;
     background: vars.$clr-white;
     width: 31rem;
@@ -21,42 +23,24 @@
     }
 }
 
-.box-home {
-    width: 14.5rem;
-    border: 0.063rem solid vars.$clr-gray-100;
-    border-radius: 0.5rem;
-
-    //media-query
-    @include mixins.respond-to(vars.$phone) {
-        justify-content: center;
-        width: 90%;
-        border: 0.063rem solid vars.$clr-gray-100;
-        border-radius: 0.5rem;
-    }
-}
-
-.box-item {
+.container-item {
     @include mixins.basic-box(flex, row, flex-start, 0rem, 47.5rem, 3.5rem, none, none);
 }
 
-.box-pass-big {
+.container-pass-big {
     @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 14.75rem, 0.75rem, vars.$clr-gray-95);
     gap: 1rem;
     position: absolute;
 }
 
-.box-pass-small {
+.container-pass-small {
     @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 12.4rem, 0.75rem, vars.$clr-gray-95);
     gap: 1rem;
     position: absolute;
 }
 
-.box-bo {
-    width: 100%;
-    padding-left: 6%;
-    padding-right: 6%;
-}
 
+//recipes
 .card-recipe {
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.75rem;
@@ -70,6 +54,15 @@
 
 }
 
+.card-recipe-img {
+    width: 100%;
+    height: 110px;
+    object-fit: cover;
+}
+
+
+
+//top recipe
 .card-top-recipe {
     display: flex;
     flex-direction: row;
@@ -99,21 +92,13 @@
     }
 }
 
-
 .top-recipe-img {
     width: 320px;
     height: 250px;
 
 }
 
-
-.card-recipe-img {
-    width: 100%;
-    height: 110px;
-    object-fit: cover;
-}
-
-
+//user profile
 .profile-container {
     width: 1800px;
     display: flex;
@@ -156,19 +141,6 @@
     }
 }
 
-.btn-hidden {
-    @include mixins.respond-to(vars.$phone) {
-        display: none;
-    }
-}
-
-.btn-hidden-desk {
-    @include mixins.respond-to(vars.$large-desktop) {
-        display: none;
-        position: relative;
-    }
-}
-
 .recipes-container {
     width: 1450px;
     margin-left: 250px;
@@ -179,18 +151,27 @@
     }
 }
 
-.photo-hidden {
+.img-detail {
+    border: none;
+    width: 598px;
+    height: 598px;
+    margin-right: 40px;
+
     @include mixins.respond-to(vars.$phone) {
-        display: none;
+        width: 344px;
+        height: 234px;
+        margin-bottom: 30px;
     }
 }
 
-.user-hidden {
-    @include mixins.respond-to(vars.$large-desktop) {
-        display: none;
+.edit-container {
+    @include mixins.respond-to(vars.$phone) {
+        display: flex;
+        flex-direction: column;
     }
 }
 
+///media queries
 @include mixins.respond-to(vars.$phone) {
     .card-recipe {
         flex-direction: row;
@@ -226,32 +207,5 @@
         object-fit: cover;
     }
 
-}
-
-.img-detail {
-    border: none;
-    width: 598px;
-    height: 598px;
-    margin-right: 40px;
-
-    @include mixins.respond-to(vars.$phone) {
-        width: 344px;
-        height: 234px;
-        margin-bottom: 30px;
-    }
-}
-
-.title-responsive {
-    @include mixins.respond-to(vars.$phone) {
-        margin-top: 5rem;
-
-    }
-}
-
-.edit-container {
-    @include mixins.respond-to(vars.$phone) {
-        display: flex;
-        flex-direction: column;
-    }
 }
 
