--- a/dev/scss/components/_container.scss
+++ b/dev/scss/components/_container.scss
@@ -49,7 +49,7 @@ height: 203px;
     margin-left: 110px;
 
     @include mixins.respond-to(vars.$phone) {
-        margin-left: 2.3rem;
+        margin-left: 1.3rem;
         width: 324px;
     }
 }
@@ -78,7 +78,7 @@ height: 203px;
 .card-top-recipe {
     display: flex;
     flex-direction: row;
-    max-width: 670px;
+    max-width: 720px;
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.75rem;
     position: relative;
@@ -87,14 +87,14 @@ height: 203px;
 
 .text-container-top {
     margin-left: 0;
-    width: 280px;
+    width: 300px;
     flex: 1 1 50%;
 }
 
 .img-container-top {
     flex: 1 1 50%;
     height: 240px;
-    width: 280px;
+    width: 300px;
     object-fit: cover;
 
     @include mixins.respond-to(vars.$phone) {
@@ -105,9 +105,9 @@ height: 203px;
 }
 
 .top-recipe-img {
-    width: 280px;
+    width: 330px;
     height: 250px;
-
+    object-fit: cover;
 }
 
 //user profile
