--- a/dev/scss/components/_container.scss
+++ b/dev/scss/components/_container.scss
@@ -73,6 +73,12 @@ height: 203px;
     object-fit: cover;
 }
 
+.detail-img {
+    width: 1024px;
+    height: 440px;
+    object-fit: cover;
+}
+
 
 //top recipe
 .card-top-recipe {
