--- a/dev/scss/components/_container.scss
+++ b/dev/scss/components/_container.scss
@@ -216,6 +216,11 @@ height: 203px;
         object-fit: cover;
     }
 
+    .detail-mobile {
+        width: 95%;
+        right: 0;
+    }
+
 }
 
 .btn-container {
