--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -49,3 +49,18 @@
 
     }
 }
+
+.overflow-title {
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+
+.top-title {
+    width: 350px;
+}
